# sinain-hud-1

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  setup-local-stt.sh  setup-local.sh  setup-nemoclaw.sh  setup-remote.sh  setup-windows.sh  start-local.sh  start-windows.ps1  start-windows.sh  start.sh
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
bridge/: package-lock.json  package.json
docs/: ANDROID-REBUILD-SPEC.md  AUDIO-STREAMING-PLAN.md  CONFIGURATION.md  ESCALATION.md  HOTKEYS.md  HUD-SKILL-PROTOCOL.md  INSTALL-BARE-AGENT.md  INSTALL-LOCAL.md  INSTALL-REMOTE.md  INSTALL.md  KNOWLEDGE_SYSTEM.md  OPENCLAW-SETUP.md  PERSONALITY-TRAITS-SYSTEM.md  PLUGINS.md  SETUP.md  SINAIN-PROTOCOL-PLAN.md  SPEC.md  TRIPLESTORE-DESIGN.md  bare-knuckles-agent-plan.md  clean-architecture-escalation.md  knowledge-system.md  nemoclaw-setup-spec.md  phase3-screen-capture-spec.md  privacy-protection-design.md  reverted-ocr-optimizations.md  websocket-rpc.md
media/: Screen Recording 2026-03-26 at 14.40.21.mov
overlay/: .gitignore  DESIGN.md  README.md  pubspec.yaml
scripts/: eval-all.sh
sense_client/: __init__.py  __main__.py  app_detector.py  app_detector_win.py  capture.py  capture_win.py  change_detector.py  config.py  gate.py  ocr.py  ollama_vision.py  privacy.py  requirements.txt  roi_extractor.py  sender.py  vision.py
server/: hud-relay.mjs  test-situation-e2e.sh
sinain-agent/: .background_output_22026.txt  .background_output_28347.txt  .env.example  (+6 more)
tools/win-audio-capture/: CMakeLists.txt  README.md  main.cpp
(+301 files in other folders)
